# Interactive-Point-Club-Segmentation

./: .gitignore  README.md  metrics_summary.md
scripts/: compute_dataset_metrics.py  debug_path.py  test_hybrid.py  test_load_frame.py  test_pointnet.py  test_sam.py
src/click_segment_core/: hybrid_segment.py  load.py  pointnet.py  pyproject.toml  sam_segment.py
src/click_segment_core/click_segment_core/: load.py
